// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Week #render renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-today is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    17
  </div>
  <div
    className="calendar-day is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    18
  </div>
  <div
    className="calendar-day is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    19
  </div>
  <div
    className="calendar-day is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    20
  </div>
  <div
    className="calendar-day is-disabled is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    21
  </div>
  <div
    className="calendar-day is-disabled is-current_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    22
  </div>
  <div
    className="calendar-day is-disabled is-current_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    23
  </div>
</div>
`

exports[`Week #render when prop \`blockClassName\` is defined renders el with prefixed class name 1`] = `
<div
  className="cal-week"
>
  <div
    className="cal-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="cal-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="cal-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`date\` falls in prop \`activeMonth\` renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`date\` falls in the previous month renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    27
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    28
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    31
  </div>
  <div
    className="calendar-day is-current_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-current_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
</div>
`

exports[`Week #render when prop \`date\` is different month renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-prev_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-prev_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-prev_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`dateDisabled\` renders <Week /> 1`] = `
<div
  className="cal-week"
>
  <div
    className="cal-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="cal-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="cal-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`disabledIntervals\` is defined renders <Week /> 1`] = `
<div
  className="cal-week"
>
  <div
    className="cal-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="cal-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="cal-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="cal-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="cal-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`highlightedStart\` and \`highlightedEnd\` are defined renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`maxDate\` is defined renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-highlighted is-today is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`minDate\` is defined renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`selectedMin\` and \`selectedMax\` are defined renders <Week /> 1`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-current_month is-start_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-selected is-end_selection is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[`Week #render when prop \`selectedMin\` and \`selectedMax\` are defined renders <Week /> 2`] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-not_selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`

exports[
  `Week #render when prop \`selectedMin\` and \`selectedMax\` are defined when prop \`selectedMin\` and \`selectedMax\` are the same day renders <Week /> 1`
] = `
<div
  className="calendar-week"
>
  <div
    className="calendar-day is-highlighted is-current_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    29
  </div>
  <div
    className="calendar-day is-selected is-highlighted is-current_month is-start_selection is-end_selection is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    30
  </div>
  <div
    className="calendar-day is-highlighted is-today is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    1
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    2
  </div>
  <div
    className="calendar-day is-next_month is-working_day is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    3
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    4
  </div>
  <div
    className="calendar-day is-next_month is-weekend is-selectable"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    5
  </div>
</div>
`
